--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -11,6 +11,7 @@
     <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h2 style="color:gold;">✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
 
@@ -61,6 +62,8 @@
 
     <footer>
       <p>I can't code yet!</p>
+      
     </footer>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
