--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -54,7 +54,9 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li></li>
+          <li>A variable is a named container that allows us to store data in our code</li>
+          <li>Control flow i sth eorder in which a computer executes code in a script</li>
+          <li><a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/JavaScript_basics">JavaScript Basics</a></li>
         </ul>
       </section>
     
