--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -63,7 +63,7 @@
     </main>
 
     <footer>
-      <p>I can't code yet!</p>
+      <p>I can code a little!</p>
       
     </footer>
     <script src="./assets/script.js"></script>
